@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 1.4.10 unreleased
+
+* fix 'subdomains' recipe to accommodate recent changes
+
 h2. 1.4.9 May 11, 2012
 
 * add 'responders' recipe (contributed by allen13)
